@@ -1,5 +1,9 @@
 2005-03-16  Johan Dahlin  <jdahlin@async.com.br>
 
+	* tests/test_radiobutton.py (RadioButtonTest): New test.
+
+	* tests: Renamed *.py to test_*.py
+
 	* gtk/gtk.override: Allow argument to RadioButtion.set_radio_group 
 	to be empty, fixes #170514 (Lorenzo Gil Sanchez)
 
